enhanced readme and fixed mobile blurry comments icon issue

--- a/static/css/global.styl
+++ b/static/css/global.styl
@@ -136,16 +136,16 @@ a
     height 100%
     background-color gray1
 
-    img
+    .comment-icon
       position absolute
       top 50%
       left 50%
-      margin-top -15px
-      margin-left -15px
+      font-size 30px
+      margin -16px 0 0 -15px
 
     .comment-count
       position relative
       top 50%
       font-size 10px
       text-align center
-      margin -1.1em 0.7em 0 0
+      margin -1.1em 0.8em 0 0
